# tree-sitter-apl

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-apl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_apl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAPL/: apl.h
bindings/swift/TreeSitterAPLTests/: TreeSitterAPLTests.swift
queries/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: alpha.txt  brackets.txt  classes.txt  control.txt  definitions.txt  examples.txt  identifiers.txt  literals.txt  namespaces.txt  parenthesis.txt  statements.txt  trad.txt  trads.txt
