[package]
name = "tree-sitter-apl"
description = "APL Tree-sitter"
version = "0.1.0"
authors = ["Jesús Galán López (yiyus) <jgl@dyalog.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "apl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/dyalog-labs/tree-sitter-apl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
